--- a/example/rpg.html
+++ b/example/rpg.html
@@ -4764,67 +4764,26 @@ tr:nth-child(even) {
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
-<th>Optional</th>
 </tr>
 <tr>
 <td>DateTime</td>
 <td style="text-align: center">datetime</td>
 <td>이벤트 일시</td>
-<td style="text-align: center"></td>
-</tr>
-<tr>
-<td>GameSvrId</td>
-<td style="text-align: center">types.stringId</td>
-<td>게임 서버 ID</td>
-<td style="text-align: center"></td>
-</tr>
-<tr>
-<td>ZoneId</td>
-<td style="text-align: center">types.unsignedId</td>
-<td>게임 서버가 속하는 구역 ID. 없는 경우 0</td>
-<td style="text-align: center"></td>
-</tr>
-<tr>
-<td>AcntId</td>
-<td style="text-align: center">types.stringId</td>
-<td>게임 계정 ID</td>
-<td style="text-align: center"></td>
-</tr>
-<tr>
-<td>LinkRd</td>
-<td style="text-align: center">types.unsigned</td>
-<td>랜덤 코드로 로그들을 연결</td>
-<td style="text-align: center">옵션</td>
-</tr>
-<tr>
-<td>CharId</td>
-<td style="text-align: center">types.stringId</td>
-<td>캐릭터 ID</td>
-<td style="text-align: center"></td>
-</tr>
-<tr>
-<td>CharName</td>
-<td style="text-align: center">string</td>
-<td>캐릭터 이름</td>
-<td style="text-align: center"></td>
-</tr>
-<tr>
-<td>CharLevel</td>
-<td style="text-align: center">types.unsigned</td>
-<td>캐릭터 레벨</td>
-<td style="text-align: center"></td>
 </tr>
 <tr>
 <td>MoneyCd</td>
 <td style="text-align: center">types.moneyCd</td>
 <td>돈 종류 코드</td>
-<td style="text-align: center"></td>
 </tr>
 <tr>
 <td>Amount</td>
 <td style="text-align: center">types.unsigned</td>
 <td>금액</td>
-<td style="text-align: center"></td>
+</tr>
+<tr>
+<td>LinkRd</td>
+<td style="text-align: center">types.unsigned</td>
+<td>CharSync 와 연결</td>
 </tr>
 </table>
 
