--- a/example/rpg.html
+++ b/example/rpg.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> rpg - LogLab Document </title>
+<title>rpg (0.0.1)</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <style>
@@ -231,7 +232,7 @@ tr:nth-child(even) {
 
 <div id="main">
   <button class="openbtn" onclick="toggleNav()">☰</button>
-  <h1>rpg - MMORPG 게임 로그 샘플</h1>
+  <h1>rpg - MMORPG 게임 로그 샘플 (0.0.1)</h1>
 
   
 
